<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_auth_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.ui.auth.AuthFragment">

    <!-- GitHub logo -->
    <ImageView
        android:id="@+id/iv_github_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/github_logo_description"
        android:src="@drawable/ic_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Token Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_token_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/personal_access_token"
        app:boxStrokeColor="@color/grey"
        app:hintTextAppearance="@style/HintTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_github_logo">

        <!-- Text input for personal access token -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_token_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Error Message -->
    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/error"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/til_token_input"
        app:layout_constraintTop_toBottomOf="@id/til_token_input" />

    <!-- Button "Sign In" -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/accent"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
