<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ui.repositories.RepositoriesListFragment">

    <!-- Toolbar with title and menu options -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_repositories_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/status_bar"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_repositories_list"
        app:title="@string/toolbar_repositories_list_title"
        app:titleTextColor="@color/white" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repositories_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_repositories_list" />

    <!-- Loading indicator for the repository list -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_loading_repositories_list"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_repositories_list" />

    <!-- Error layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_error_layout_repositories_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_repositories_list">

        <!-- Error image -->
        <ImageView
            android:id="@+id/iv_error_image_repositories_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_network_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <!-- Error title -->
        <TextView
            android:id="@+id/tv_error_title_repositories_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/error_network"
            android:textColor="@color/error"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_error_image_repositories_list" />

        <!-- Error description -->
        <TextView
            android:id="@+id/tv_error_description_repositories_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_network_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_title_repositories_list" />

        <!-- Error button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_error_repositories_list"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/accent"
            android:text="@string/retry"
            android:textColor="@color/white"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
